# simple_smtp_sender

./: .gitignore  Cargo.toml  README.md  mac_build.rs  pyproject.toml  simple_smtp_sender.pyi
.github/workflows/: CI.yml
src/: email.rs  email_client.rs  email_config.rs  email_config_py.rs  lib.rs
tests/: tests.rs
