[package]
name = "simple_smtp_sender"
version = "0.3.1"
edition = "2024"
description = "A Simple SMTP Email sender crate with the support of sync or async sending. Can be called from Python. Powered by PyO3."
repository = "https://github.com/guangyuhe/simple_smtp_sender"
license = "MIT"
authors = ["Guangyu He <fredhgy2010@gmail.com>"]
exclude = [".github/workflows/CI.yml", "simple_smtp_sender.pyi", ".gitignore", "pyproject.toml", "tests/*", "examples/*", "docs/*", "mac_build.rs"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "simple_smtp_sender"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { features = ["extension-module", "abi3-py310", "generate-import-lib"], version = "0.28", optional = true }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }
mime_guess = "2.0"
anyhow = "1.0"
pyo3-async-runtimes = { version = "0.28", features = ["attributes", "tokio-runtime"], optional = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.49", features = ["test-util", "rt", "macros"] }

[features]
default = ["rslib"]
rslib = []
python = ["dep:pyo3", "dep:pyo3-async-runtimes"]

[[test]]
name = "unit_tests"
harness = true
path = "tests/tests.rs"